--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,9 @@
-<h1>World's Best Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>World's Best Lasagna</h1>
+    </body>
+</html>
