--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,5 +5,38 @@
     </head>
     <body>
         <h1>World's Best Lasagna</h1>
+        <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Feaf2a87ca2376e9dca53110c86de9d30%2F168220321707920230226_165819.jpg&q=60&c=sc&orient=true&poi=auto&h=512">
+        <h3>Description</h3>
+        <p>A lovely little lasagna made with meat and cheese.</p>
+        <h4>Ingredients:</h4>
+            <ul>
+                <li>Meat: This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+                <li>Onion and garlic: An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+                <li>Tomato products: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+                <li>Sugar: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+                <li>Spices and seasonings: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+                <li>Lasagna noodles: Use store-bought or homemade lasagna noodles.</li>
+                <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+                <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
+            </ul>
+        <h4>Step by step</h4>
+            <ol>
+                <li>Make the meat sauce.</li>
+                <li>Cook the noodles.</li>
+                <li>Make the ricotta mixture.</li>
+                <li>Layer the lasagna according to the recipe instruction.</li>
+                <li>Cover with foil and bake</li>
+                <li>Let the lasagna rest before serving.</li>
+            </ol>
+            <h4>Layers</h4>
+            <ol>
+                <li>Meat sauce</li>
+                <li>Noodles</li>
+                <li>Ricotta mixture</li>
+                <li>Mozzarella slices</li>
+                <li>Meat sauce</li>
+                <li>Parmesan cheese</li>
+                <li>Repeat the layers, then top with the remaining Parmesan.</li>
+            </ol>
     </body>
 </html>
