--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/burger.html">Burger</a></li>
+            <li><a href="recipes/edamame.html">Edamame</a></li>
         </ul>
     </body>
 </html>
